feat(apps/api): implement and test GetFuseLeveragedTokenBackingsBySymbol
