# apps/api/src/controllers/flts.ts
@@ -123,6 +123,40 @@ async function GetFuseLeveragedTokenSwapsBySymbol(
     }
 }
 
+/**
+ * GetFuseLeveragedTokenBackingsBySymbol return backings history
+ */
+async function GetFuseLeveragedTokenBackingsBySymbol(
+    req: Request,
+    res: Response
+) {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        return res.status(404).json({ errors: errors.array() });
+    }
+    try {
+        const swaps = await fltsService.getFuseLeveragedTokenBackingsBySymbol(
+            req.params.chainId as unknown as ChainId,
+            req.params.symbol
+        );
+        if (swaps == undefined) {
+            return res.status(404).json({
+                errors: [
+                    {
+                        location: "params",
+                        msg: "symbol not found",
+                        param: "symbol",
+                        value: req.params.symbol,
+                    },
+                ],
+            });
+        }
+        return res.status(200).json(swaps);
+    } catch (e) {
+        return res.status(500).json({ error: e });
+    }
+}
+
 const GetFuseLeveragedTokensByChainIdValidation = GetTokensByChainIdValidation;
 
 const flts = {
@@ -131,6 +165,7 @@ const flts = {
     GetFuseLeveragedTokenBySymbol,
     GetFuseLeveragedTokenChartsBySymbol,
     GetFuseLeveragedTokenSwapsBySymbol,
+    GetFuseLeveragedTokenBackingsBySymbol,
 };
 
 export default flts;
